--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
     ports:
       - "0.0.0.0:8082:80"
     volumes:
-      - ./nextcloud:/var/www/html
+      - nextcloud_data:/var/www/html
     depends_on:
       - mariadb
     environment:
@@ -66,3 +66,4 @@ services:
 
 volumes:
   mariadb_data:
+  nextcloud_data:
